fix: hide grid toggle buttons on mobile

--- a/src/components/GitTimeline/GitTimeline.module.css
+++ b/src/components/GitTimeline/GitTimeline.module.css
@@ -361,6 +361,10 @@
     flex-wrap: wrap;
   }
 
+  .gridToggle {
+    display: none;
+  }
+
   .searchBox {
     width: 100%;
     margin-left: 0;
